# fbneo-launcher

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  config.json  test_download.cpp  test_real_scan  test_real_scan.cpp  test_scan  test_scan.cpp
cache/: scan_cache.json
src/: AppContext.cpp  AppContext.h  DatParser.cpp  DatParser.h  DownloadDialog.cpp  DownloadDialog.h  Game.h  GameRow.cpp  GameRow.h  GenerateDAT.cpp  GenerateDAT.h  IconManager.cpp  IconManager.h  MainWindow.cpp  MainWindow.h  ModelColumns.h  RomScanner.cpp  RomScanner.h  ScanCache.cpp  ScanCache.h  ScanProgressDialog.cpp  ScanProgressDialog.h  SettingsPanel.cpp  SettingsPanel.h  SplashScreen.cpp  SplashScreen.h  main.cpp
